# server/router/taskRoute/task.go
@@ -51,6 +51,7 @@ func (s *TaskRouter) InitTaskRouter(Router *gin.RouterGroup) (R gin.IRoutes) {
 		taskRouter.POST("template/addSetTask", authorityTemplateApi.AddSetTask)         // 分页获取管理员列表
 		taskRouter.POST("template/processSetTask", authorityTemplateApi.ProcessSetTask) // 分页获取管理员列表
 		taskRouter.POST("template/getSetTaskById", authorityTemplateApi.GetSetTaskById) // 获取管理员
+		taskRouter.POST("template/getSetTaskList", authorityTemplateApi.GetSetTaskList) // 获取管理员
 	}
 
 	var authorityScheduleApi = v1.ApiGroupApp.TaskApiGroup.ScheduleApi
